# copycat

./: .gitignore  Cargo.toml
src/: cheetah.rs  kitty.rs  lib.rs  main.rs
src/cheetah/: mod.rs
src/cookiejar/: hashcookie.rs  mod.rs
src/kitty/: cheetah.rs  mod.rs  util.rs
src/lynx/: iter.rs  mod.rs
src/options/: mod.rs
