[package]
name = "copycat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.8", features = ["derive"] }
image = "0.24.4"
image_hasher = "1.0.0"
indicatif = "0.17.1"
rayon = "1.5.3"
